<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/cons_list_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="horizontal" >

        <!-- TextView
	        android:id="@+id/dateHeaderLine"
	        android:layout_weight="1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="18sp"
	        android:textStyle="bold"
	        android:text="@string/dateHeaderText"
	        android:singleLine="true"
	        android:layout_marginTop="6dp"
	        android:layout_marginLeft="6dp" />  -->

		<TextView
	        android:id="@+id/refuelKmHeaderLine"
	        android:layout_weight="1"
	        android:gravity="start"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:textStyle="bold"
	        android:text="@string/refuelKmHeaderText"
	        android:singleLine="true"
	        android:layout_marginTop="6dp"
	        android:layout_marginStart="6dp"
	        android:layout_marginLeft="6dp" />

         <TextView
	        android:id="@+id/drivenKmHeaderLine"
	        android:layout_weight="1"
	        android:gravity="start"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:textStyle="bold"
	        android:text="@string/drivenKmKmHeaderText"
	        android:singleLine="true"
	        android:layout_marginTop="6dp" />

         <TextView
	        android:id="@+id/literHeaderLine"
	        android:layout_weight="1"
	        android:gravity="start"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:textStyle="bold"
	        android:text="@string/literHeaderText"
	        android:singleLine="true"
	        android:layout_marginTop="6dp" />

         <TextView
	        android:id="@+id/priceHeaderLine"
	        android:layout_weight="1"
	        android:gravity="start"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:textStyle="bold"
	        android:text="@string/priceHeaderText"
	        android:singleLine="true"
	        android:layout_marginTop="6dp" />

         <TextView
	        android:id="@+id/consumptionHeaderLine"
	        android:layout_weight="1"
	        android:gravity="start"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:textStyle="bold"
	        android:text="@string/consumptionKmHeaderText"
	        android:singleLine="true"
	        android:layout_marginTop="6dp" />
     </LinearLayout>

    <ListView
		android:id="@android:id/list"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/cons_list_header"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/car_list_title" >
	</ListView>

</RelativeLayout>




